2005-01-08  Miguel de Icaza  <miguel@ximian.com>

	* attribute.cs: Check for null and empty strings.  

	I have lost another battle to Paolo.

2005-01-07  Marek Safar  <marek.safar@seznam.cz>

	Fix #70942
	* class.cs (PropertyMethod): Set Parent field in ctors.
	(SetMethod.InternalParameters): Add unsafe switch hack.
	Override MarkForDuplicationCheck where it is appropriate.

	* decl.cs (MemberCore.MarkForDuplicationCheck): New method.
	It says whether container allows members with the same name.
	Base default is no.
	(DeclSpace.AddToContainer): Use MarkForDuplicationCheck.
	Removed is_method parameter.

2005-01-06  Duncan Mak  <duncan@ximian.com>

	* cs-tokenizer.cs (xtoken): Redo the work for signaling CS1040
	because the previous change led to incorrect reporting of CS1032
	("Cannot define/undefine preprocessor symbols after first token in
	file"). Instead of using `tokens_seen' as the only flag that
	triggers CS1040, introduce `comments_seen'. This new flag is used
	to signify having seen comments on the current line, so it is
	unset after a newline.

2005-01-06  Atsushi Enomoto  <atsushi@ximian.com>

	* doc.cs : When searching for a type, find nested type too.
	  This fixes bug #71040.

2005-01-06  Atsushi Enomoto  <atsushi@ximian.com>

	* doc.cs :
	  - Warn missing member comment on those classes which also does not
	    have doc comments. Fixed bug #71041.
	  - Don't warn missing doc comment on default constructor.
	    Fixed bug #71042.

2005-01-06  Duncan Mak  <duncan@ximian.com>

	* cs-tokenizer.cs (xtoken): After handling traditional C-style
 	comments, set `tokens_seen' to true. This allows us to detect
 	misplaced preprocessor directives (i.e. not at the beginning of
 	the a line, nor after whitespaces). In that case, report error
 	CS1040. This fixes bug #56460.

	* cs-parser.jay (interface_member_declaration): Add checks for
	IsExplicitImpl, and report CS0541 error if an interface member is
	defined as an explicit interface declaration.
