@@ -1,3 +1,9 @@
+2005-01-10  Marek Safar  <marek.safar@seznam.cz>
+
+	Fix #70722
+	* class.cs (MethodCore.CheckBase): Test base method obsoleteness
+	only for overrides.
+	
 2005-01-08  Miguel de Icaza  <miguel@ximian.com>
 
 	* attribute.cs: Check for null and empty strings.  
